<!--
  ~ Copyright (c) 2021 by Skarlet RED
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Genshin Damage Boost</string>

    <!-- Bottom navigation -->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_characters">Characters</string>
    <string name="menu_weapons">Weapons</string>
    <string name="menu_artifacts">Artifacts</string>
    <string name="menu_advanced">Advanced</string>

    <!-- Keywords -->
    <string name="name">Name</string>
    <string name="level">Level</string>
    <string name="vision">Vision</string>
    <string name="health">HP</string>
    <string name="health_rate">HP %</string>
    <string name="attack">ATK</string>
    <string name="attack_rate">ATK %</string>
    <string name="defense">DEF</string>
    <string name="defense_rate">DEF %</string>
    <string name="base_health">Base HP</string>
    <string name="base_attack">Base ATK</string>
    <string name="base_defense">Base DEF</string>
    <string name="elemental_mastery">Elemental Mastery</string>
    <string name="crit_rate">CRIT Rate</string>
    <string name="crit_dmg">CRIT DMG</string>
    <string name="damage_bonus">DMG Bonus</string>
    <string name="e_damage_bonus"><xliff:g example="Pyro" id="element">%1$s</xliff:g> DMG Bonus</string>
    <string name="elemental_damage_bonus">Elemental DMG Bonus</string>
    <string name="phys_damage_bonus">Phys DMG Bonus</string>
    <string name="reduce_cd">Reduce CD</string>
    <string name="energy_recharge">Energy Recharge</string>
    <string name="healing_bonus">Healing Bonus</string>
    <string name="powerful_shield">Powerful Shield</string>

    <!-- Element type -->
    <string name="pyro">Pyro</string>
    <string name="hydro">Hydro</string>
    <string name="dendro">Dendro</string>
    <string name="electro">Electro</string>
    <string name="anemo">Anemo</string>
    <string name="cryo">Cryo</string>
    <string name="geo">Geo</string>

    <!-- Artifact type -->
    <string name="flower_of_life">Flower of Life</string>
    <string name="plume_of_death">Plume of Death</string>
    <string name="sands_of_eon">Sands of Eon</string>
    <string name="goblet_of_eonothem">Goblet of Eonothem</string>
    <string name="circlet_of_logos">Circlet of Logos</string>

    <!-- Weapon type -->
    <string name="bow">Bow</string>
    <string name="sword">Sword</string>
    <string name="polearm">Polearm</string>
    <string name="claymore">Claymore</string>
    <string name="catalyst">Catalyst</string>


    <!-- Menu -->
    <string name="save">Save</string>

    <!-- Welcome -->
    <string name="welcome">Welcome</string>
    <string name="characters">Characters</string>
    <string name="weapons">Weapons</string>
    <string name="artifacts">Artifacts</string>
    <string name="advanced">Advanced</string>
    <string name="builds">Builds</string>
    <string name="new_character">Make Character</string>
    <string name="new_weapon">Make Weapon</string>
    <string name="new_artifact">Make Artifact</string>
    <string name="new_build">Make Build</string>

    <!-- New Character -->
    <string name="character_name">Character name</string>

    <!-- New Weapon -->
    <string name="weapon_name">Weapon name</string>
    <string name="weapon_type">Weapon Type</string>
    <string name="weapon_level">Weapon Level</string>
    <string name="sub_stat">Sub Stat</string>
    <string name="sub_stat_rate">Sub Stat Rate</string>

    <!-- New Artifact -->
    <string name="artifact_name">Artifact name</string>


    <string name="choose_an_item">Choose an item</string>
    <string name="add_item">add item</string>
    <string name="lvl_num">Lv. <xliff:g example="90" id="level">%1$d</xliff:g></string>

</resources>