<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_characters"
        android:name="ua.skarlet.gis.ui.artifact.ArtifactsFragment"
        android:label="@string/menu_characters"
        tools:layout="@layout/fragment_character" />

    <fragment
        android:id="@+id/navigation_weapons"
        android:name="ua.skarlet.gis.ui.weapon.WeaponsFragment"
        android:label="@string/menu_weapons"
        tools:layout="@layout/fragment_weapons" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ua.skarlet.gis.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_artifcats"
        android:name="ua.skarlet.gis.ui.weapon.WeaponsFragment"
        android:label="@string/menu_weapons"
        tools:layout="@layout/fragment_weapons" />

    <fragment
        android:id="@+id/navigation_advanced"
        android:name="ua.skarlet.gis.ui.weapon.WeaponsFragment"
        android:label="@string/menu_weapons"
        tools:layout="@layout/fragment_weapons" />

</navigation>