<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 by Skarlet RED
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ua.skarlet.gis.ui.dashboard.character.one.NewCharacterFragment">

    <data>

        <variable
            name="viewModel"
            type="ua.skarlet.gis.ui.dashboard.character.one.NewCharacterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/layout_margin">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                app:boxStrokeColor="@color/textPrimary"
                app:hintTextColor="@color/textSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/characterName"
                    style="@style/Text.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="src_in"
                    android:foregroundTint="#ff0000"
                    android:foregroundTintMode="src_atop"
                    android:hint="@string/character_name"
                    android:inputType="text"
                    android:text="@={viewModel.characterName}"
                    android:textColorHighlight="@color/textSecondary"
                    android:textColorLink="@color/purple_500" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                app:boxStrokeColor="@color/textPrimary"
                app:hintTextColor="@color/textSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/level"
                    style="@style/Text.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/level"
                    android:inputType="number"
                    android:text="@={viewModel.level}" />
            </com.google.android.material.textfield.TextInputLayout>

            <ua.skarlet.gis.util.view.dropdown.DropdownTextInputLayout
                android:id="@+id/visionDropdown"
                style="@style/TextInputLayout"
                app:boxStrokeColor="@color/textPrimary"
                app:dropdownHeader="@string/vision"
                app:hintAnimationEnabled="false"
                app:hintTextColor="@color/textSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vision"
                    style="@style/Text.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vision"
                    android:inputType="none" />
            </ua.skarlet.gis.util.view.dropdown.DropdownTextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                app:boxStrokeColor="@color/textPrimary"
                app:hintTextColor="@color/textSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/baseHP"
                    style="@style/Text.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/base_health"
                    android:inputType="number"
                    android:text="@={viewModel.baseHP}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                app:boxStrokeColor="@color/textPrimary"
                app:hintTextColor="@color/textSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/baseATK"
                    style="@style/Text.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/base_attack"
                    android:inputType="number"
                    android:text="@={viewModel.baseATK}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                app:boxStrokeColor="@color/textPrimary"
                app:hintTextColor="@color/textSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/baseDEF"
                    style="@style/Text.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/base_defense"
                    android:inputType="number"
                    android:text="@={viewModel.baseDEF}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                app:boxStrokeColor="@color/textPrimary"
                app:hintTextColor="@color/textSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/elementalMastery"
                    style="@style/Text.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/elemental_mastery"
                    android:inputType="number"
                    android:text="@={viewModel.elementalMastery}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                app:boxStrokeColor="@color/textPrimary"
                app:hintTextColor="@color/textSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/critRate"
                    style="@style/Text.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crit_rate"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.critRate}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                app:boxStrokeColor="@color/textPrimary"
                app:hintTextColor="@color/textSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/critDamage"
                    style="@style/Text.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crit_dmg"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.critDamage}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_marginBottom="@dimen/margin_1.0"
                app:boxStrokeColor="@color/textPrimary"
                app:hintTextColor="@color/textSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/elementalDamageBonus"
                    style="@style/Text.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/elemental_damage_bonus"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.elementalDamageBonus}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSaveCharacter"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttonClipSize"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>
</layout>